k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: jaideep08/nodejs-crud-project:@sha256:e405910796780a89f71ab39bfbf0adde73979aa920ed7c02b8ec994762d63d04
        ports:
        - containerPort: 5000
